src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_funciones
Rule 2     lista_funciones -> lista_funciones funcion
Rule 3     lista_funciones -> funcion
Rule 4     funcion -> FUNC ID PARENTESIS_I lista_pfunc PARENTESIS_D bloque
Rule 5     funcion -> FUNC ID PARENTESIS_I PARENTESIS_D bloque
Rule 6     funcion -> FUNC MAIN PARENTESIS_I PARENTESIS_D bloque
Rule 7     lista_pfunc -> INT ID COMA INT ID COMA INT ID
Rule 8     lista_pfunc -> INT ID COMA INT ID
Rule 9     lista_pfunc -> INT ID
Rule 10    bloque -> LLAVE_I sentencias LLAVE_D
Rule 11    bloque -> LLAVE_I LLAVE_D
Rule 12    sentencias -> sentencias sentencia
Rule 13    sentencias -> sentencia
Rule 14    sentencia -> declaracion
Rule 15    sentencia -> asignacion
Rule 16    sentencia -> seleccion
Rule 17    sentencia -> iteracion
Rule 18    sentencia -> salida
Rule 19    sentencia -> retorno
Rule 20    sentencia -> bloque
Rule 21    declaracion -> INT lista_ids PUNTO_COMA
Rule 22    lista_ids -> lista_ids COMA ID
Rule 23    lista_ids -> ID
Rule 24    asignacion -> ID ASIG expresion_log PUNTO_COMA
Rule 25    seleccion -> IF PARENTESIS_I expresion_log PARENTESIS_D bloque ELSE bloque
Rule 26    seleccion -> IF PARENTESIS_I expresion_log PARENTESIS_D bloque
Rule 27    iteracion -> WHILE PARENTESIS_I expresion_log PARENTESIS_D bloque
Rule 28    salida -> PRINT PARENTESIS_I expresion_log PARENTESIS_D PUNTO_COMA
Rule 29    salida -> PRINT PARENTESIS_I CADENA PARENTESIS_D PUNTO_COMA
Rule 30    salida -> PRINT PARENTESIS_I CADENA COMA expresion_log PARENTESIS_D PUNTO_COMA
Rule 31    retorno -> RET expresion_log PUNTO_COMA
Rule 32    expresion_log -> expresion_log OR term_log
Rule 33    expresion_log -> term_log
Rule 34    term_log -> term_log AND factor_log
Rule 35    term_log -> factor_log
Rule 36    factor_log -> expresion_relacional
Rule 37    expresion_relacional -> expresion_aritmetica comparador expresion_aritmetica
Rule 38    expresion_relacional -> expresion_aritmetica
Rule 39    comparador -> IGUAL
Rule 40    comparador -> MAYOR
Rule 41    comparador -> MENOR
Rule 42    comparador -> MAYOR_E
Rule 43    comparador -> MENOR_E
Rule 44    comparador -> DISTINTO
Rule 45    expresion_aritmetica -> expresion_aritmetica SUMA termino
Rule 46    expresion_aritmetica -> expresion_aritmetica RESTA termino
Rule 47    expresion_aritmetica -> termino
Rule 48    termino -> termino MULTIPLICAR factor
Rule 49    termino -> termino DIVISION factor
Rule 50    termino -> factor
Rule 51    factor -> ID
Rule 52    factor -> CTE_ENTERA
Rule 53    factor -> PARENTESIS_I expresion_log PARENTESIS_D
Rule 54    factor -> llamada_funcional
Rule 55    llamada_funcional -> ID PARENTESIS_I lista_parametros PARENTESIS_D
Rule 56    llamada_funcional -> ID PARENTESIS_I PARENTESIS_D
Rule 57    lista_parametros -> expresion_log COMA expresion_log COMA expresion_log
Rule 58    lista_parametros -> expresion_log COMA expresion_log
Rule 59    lista_parametros -> expresion_log

Terminals, with rules where they appear

AND                  : 34
ASIG                 : 24
CADENA               : 29 30
COMA                 : 7 7 8 22 30 57 57 58
CTE_ENTERA           : 52
DISTINTO             : 44
DIVISION             : 49
ELSE                 : 25
FUNC                 : 4 5 6
ID                   : 4 5 7 7 7 8 8 9 22 23 24 51 55 56
IF                   : 25 26
IGUAL                : 39
INT                  : 7 7 7 8 8 9 21
LLAVE_D              : 10 11
LLAVE_I              : 10 11
MAIN                 : 6
MAYOR                : 40
MAYOR_E              : 42
MENOR                : 41
MENOR_E              : 43
MULTIPLICAR          : 48
OR                   : 32
PARENTESIS_D         : 4 5 6 25 26 27 28 29 30 53 55 56
PARENTESIS_I         : 4 5 6 25 26 27 28 29 30 53 55 56
PRINT                : 28 29 30
PUNTO_COMA           : 21 24 28 29 30 31
RESTA                : 46
RET                  : 31
SUMA                 : 45
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

asignacion           : 15
bloque               : 4 5 6 20 25 25 26 27
comparador           : 37
declaracion          : 14
expresion_aritmetica : 37 37 38 45 46
expresion_log        : 24 25 26 27 28 30 31 32 53 57 57 57 58 58 59
expresion_relacional : 36
factor               : 48 49 50
factor_log           : 34 35
funcion              : 2 3
iteracion            : 17
lista_funciones      : 1 2
lista_ids            : 21 22
lista_parametros     : 55
lista_pfunc          : 4
llamada_funcional    : 54
programa             : 0
retorno              : 19
salida               : 18
seleccion            : 16
sentencia            : 12 13
sentencias           : 10 12
term_log             : 32 33 34
termino              : 45 46 47 48 49

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_funciones
    (2) lista_funciones -> . lista_funciones funcion
    (3) lista_funciones -> . funcion
    (4) funcion -> . FUNC ID PARENTESIS_I lista_pfunc PARENTESIS_D bloque
    (5) funcion -> . FUNC ID PARENTESIS_I PARENTESIS_D bloque
    (6) funcion -> . FUNC MAIN PARENTESIS_I PARENTESIS_D bloque

    FUNC            shift and go to state 4

    programa                       shift and go to state 1
    lista_funciones                shift and go to state 2
    funcion                        shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_funciones .
    (2) lista_funciones -> lista_funciones . funcion
    (4) funcion -> . FUNC ID PARENTESIS_I lista_pfunc PARENTESIS_D bloque
    (5) funcion -> . FUNC ID PARENTESIS_I PARENTESIS_D bloque
    (6) funcion -> . FUNC MAIN PARENTESIS_I PARENTESIS_D bloque

    $end            reduce using rule 1 (programa -> lista_funciones .)
    FUNC            shift and go to state 4

    funcion                        shift and go to state 5

state 3

    (3) lista_funciones -> funcion .

    FUNC            reduce using rule 3 (lista_funciones -> funcion .)
    $end            reduce using rule 3 (lista_funciones -> funcion .)


state 4

    (4) funcion -> FUNC . ID PARENTESIS_I lista_pfunc PARENTESIS_D bloque
    (5) funcion -> FUNC . ID PARENTESIS_I PARENTESIS_D bloque
    (6) funcion -> FUNC . MAIN PARENTESIS_I PARENTESIS_D bloque

    ID              shift and go to state 6
    MAIN            shift and go to state 7


state 5

    (2) lista_funciones -> lista_funciones funcion .

    FUNC            reduce using rule 2 (lista_funciones -> lista_funciones funcion .)
    $end            reduce using rule 2 (lista_funciones -> lista_funciones funcion .)


state 6

    (4) funcion -> FUNC ID . PARENTESIS_I lista_pfunc PARENTESIS_D bloque
    (5) funcion -> FUNC ID . PARENTESIS_I PARENTESIS_D bloque

    PARENTESIS_I    shift and go to state 8


state 7

    (6) funcion -> FUNC MAIN . PARENTESIS_I PARENTESIS_D bloque

    PARENTESIS_I    shift and go to state 9


state 8

    (4) funcion -> FUNC ID PARENTESIS_I . lista_pfunc PARENTESIS_D bloque
    (5) funcion -> FUNC ID PARENTESIS_I . PARENTESIS_D bloque
    (7) lista_pfunc -> . INT ID COMA INT ID COMA INT ID
    (8) lista_pfunc -> . INT ID COMA INT ID
    (9) lista_pfunc -> . INT ID

    PARENTESIS_D    shift and go to state 11
    INT             shift and go to state 12

    lista_pfunc                    shift and go to state 10

state 9

    (6) funcion -> FUNC MAIN PARENTESIS_I . PARENTESIS_D bloque

    PARENTESIS_D    shift and go to state 13


state 10

    (4) funcion -> FUNC ID PARENTESIS_I lista_pfunc . PARENTESIS_D bloque

    PARENTESIS_D    shift and go to state 14


state 11

    (5) funcion -> FUNC ID PARENTESIS_I PARENTESIS_D . bloque
    (10) bloque -> . LLAVE_I sentencias LLAVE_D
    (11) bloque -> . LLAVE_I LLAVE_D

    LLAVE_I         shift and go to state 16

    bloque                         shift and go to state 15

state 12

    (7) lista_pfunc -> INT . ID COMA INT ID COMA INT ID
    (8) lista_pfunc -> INT . ID COMA INT ID
    (9) lista_pfunc -> INT . ID

    ID              shift and go to state 17


state 13

    (6) funcion -> FUNC MAIN PARENTESIS_I PARENTESIS_D . bloque
    (10) bloque -> . LLAVE_I sentencias LLAVE_D
    (11) bloque -> . LLAVE_I LLAVE_D

    LLAVE_I         shift and go to state 16

    bloque                         shift and go to state 18

state 14

    (4) funcion -> FUNC ID PARENTESIS_I lista_pfunc PARENTESIS_D . bloque
    (10) bloque -> . LLAVE_I sentencias LLAVE_D
    (11) bloque -> . LLAVE_I LLAVE_D

    LLAVE_I         shift and go to state 16

    bloque                         shift and go to state 19

state 15

    (5) funcion -> FUNC ID PARENTESIS_I PARENTESIS_D bloque .

    FUNC            reduce using rule 5 (funcion -> FUNC ID PARENTESIS_I PARENTESIS_D bloque .)
    $end            reduce using rule 5 (funcion -> FUNC ID PARENTESIS_I PARENTESIS_D bloque .)


state 16

    (10) bloque -> LLAVE_I . sentencias LLAVE_D
    (11) bloque -> LLAVE_I . LLAVE_D
    (12) sentencias -> . sentencias sentencia
    (13) sentencias -> . sentencia
    (14) sentencia -> . declaracion
    (15) sentencia -> . asignacion
    (16) sentencia -> . seleccion
    (17) sentencia -> . iteracion
    (18) sentencia -> . salida
    (19) sentencia -> . retorno
    (20) sentencia -> . bloque
    (21) declaracion -> . INT lista_ids PUNTO_COMA
    (24) asignacion -> . ID ASIG expresion_log PUNTO_COMA
    (25) seleccion -> . IF PARENTESIS_I expresion_log PARENTESIS_D bloque ELSE bloque
    (26) seleccion -> . IF PARENTESIS_I expresion_log PARENTESIS_D bloque
    (27) iteracion -> . WHILE PARENTESIS_I expresion_log PARENTESIS_D bloque
    (28) salida -> . PRINT PARENTESIS_I expresion_log PARENTESIS_D PUNTO_COMA
    (29) salida -> . PRINT PARENTESIS_I CADENA PARENTESIS_D PUNTO_COMA
    (30) salida -> . PRINT PARENTESIS_I CADENA COMA expresion_log PARENTESIS_D PUNTO_COMA
    (31) retorno -> . RET expresion_log PUNTO_COMA
    (10) bloque -> . LLAVE_I sentencias LLAVE_D
    (11) bloque -> . LLAVE_I LLAVE_D

    LLAVE_D         shift and go to state 21
    INT             shift and go to state 30
    ID              shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    PRINT           shift and go to state 34
    RET             shift and go to state 35
    LLAVE_I         shift and go to state 16

    sentencias                     shift and go to state 20
    sentencia                      shift and go to state 22
    declaracion                    shift and go to state 23
    asignacion                     shift and go to state 24
    seleccion                      shift and go to state 25
    iteracion                      shift and go to state 26
    salida                         shift and go to state 27
    retorno                        shift and go to state 28
    bloque                         shift and go to state 29

state 17

    (7) lista_pfunc -> INT ID . COMA INT ID COMA INT ID
    (8) lista_pfunc -> INT ID . COMA INT ID
    (9) lista_pfunc -> INT ID .

    COMA            shift and go to state 36
    PARENTESIS_D    reduce using rule 9 (lista_pfunc -> INT ID .)


state 18

    (6) funcion -> FUNC MAIN PARENTESIS_I PARENTESIS_D bloque .

    FUNC            reduce using rule 6 (funcion -> FUNC MAIN PARENTESIS_I PARENTESIS_D bloque .)
    $end            reduce using rule 6 (funcion -> FUNC MAIN PARENTESIS_I PARENTESIS_D bloque .)


state 19

    (4) funcion -> FUNC ID PARENTESIS_I lista_pfunc PARENTESIS_D bloque .

    FUNC            reduce using rule 4 (funcion -> FUNC ID PARENTESIS_I lista_pfunc PARENTESIS_D bloque .)
    $end            reduce using rule 4 (funcion -> FUNC ID PARENTESIS_I lista_pfunc PARENTESIS_D bloque .)


state 20

    (10) bloque -> LLAVE_I sentencias . LLAVE_D
    (12) sentencias -> sentencias . sentencia
    (14) sentencia -> . declaracion
    (15) sentencia -> . asignacion
    (16) sentencia -> . seleccion
    (17) sentencia -> . iteracion
    (18) sentencia -> . salida
    (19) sentencia -> . retorno
    (20) sentencia -> . bloque
    (21) declaracion -> . INT lista_ids PUNTO_COMA
    (24) asignacion -> . ID ASIG expresion_log PUNTO_COMA
    (25) seleccion -> . IF PARENTESIS_I expresion_log PARENTESIS_D bloque ELSE bloque
    (26) seleccion -> . IF PARENTESIS_I expresion_log PARENTESIS_D bloque
    (27) iteracion -> . WHILE PARENTESIS_I expresion_log PARENTESIS_D bloque
    (28) salida -> . PRINT PARENTESIS_I expresion_log PARENTESIS_D PUNTO_COMA
    (29) salida -> . PRINT PARENTESIS_I CADENA PARENTESIS_D PUNTO_COMA
    (30) salida -> . PRINT PARENTESIS_I CADENA COMA expresion_log PARENTESIS_D PUNTO_COMA
    (31) retorno -> . RET expresion_log PUNTO_COMA
    (10) bloque -> . LLAVE_I sentencias LLAVE_D
    (11) bloque -> . LLAVE_I LLAVE_D

    LLAVE_D         shift and go to state 37
    INT             shift and go to state 30
    ID              shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    PRINT           shift and go to state 34
    RET             shift and go to state 35
    LLAVE_I         shift and go to state 16

    sentencia                      shift and go to state 38
    declaracion                    shift and go to state 23
    asignacion                     shift and go to state 24
    seleccion                      shift and go to state 25
    iteracion                      shift and go to state 26
    salida                         shift and go to state 27
    retorno                        shift and go to state 28
    bloque                         shift and go to state 29

state 21

    (11) bloque -> LLAVE_I LLAVE_D .

    FUNC            reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    $end            reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    LLAVE_D         reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    INT             reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    ID              reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    IF              reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    WHILE           reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    PRINT           reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    RET             reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    LLAVE_I         reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)
    ELSE            reduce using rule 11 (bloque -> LLAVE_I LLAVE_D .)


state 22

    (13) sentencias -> sentencia .

    LLAVE_D         reduce using rule 13 (sentencias -> sentencia .)
    INT             reduce using rule 13 (sentencias -> sentencia .)
    ID              reduce using rule 13 (sentencias -> sentencia .)
    IF              reduce using rule 13 (sentencias -> sentencia .)
    WHILE           reduce using rule 13 (sentencias -> sentencia .)
    PRINT           reduce using rule 13 (sentencias -> sentencia .)
    RET             reduce using rule 13 (sentencias -> sentencia .)
    LLAVE_I         reduce using rule 13 (sentencias -> sentencia .)


state 23

    (14) sentencia -> declaracion .

    LLAVE_D         reduce using rule 14 (sentencia -> declaracion .)
    INT             reduce using rule 14 (sentencia -> declaracion .)
    ID              reduce using rule 14 (sentencia -> declaracion .)
    IF              reduce using rule 14 (sentencia -> declaracion .)
    WHILE           reduce using rule 14 (sentencia -> declaracion .)
    PRINT           reduce using rule 14 (sentencia -> declaracion .)
    RET             reduce using rule 14 (sentencia -> declaracion .)
    LLAVE_I         reduce using rule 14 (sentencia -> declaracion .)


state 24

    (15) sentencia -> asignacion .

    LLAVE_D         reduce using rule 15 (sentencia -> asignacion .)
    INT             reduce using rule 15 (sentencia -> asignacion .)
    ID              reduce using rule 15 (sentencia -> asignacion .)
    IF              reduce using rule 15 (sentencia -> asignacion .)
    WHILE           reduce using rule 15 (sentencia -> asignacion .)
    PRINT           reduce using rule 15 (sentencia -> asignacion .)
    RET             reduce using rule 15 (sentencia -> asignacion .)
    LLAVE_I         reduce using rule 15 (sentencia -> asignacion .)


state 25

    (16) sentencia -> seleccion .

    LLAVE_D         reduce using rule 16 (sentencia -> seleccion .)
    INT             reduce using rule 16 (sentencia -> seleccion .)
    ID              reduce using rule 16 (sentencia -> seleccion .)
    IF              reduce using rule 16 (sentencia -> seleccion .)
    WHILE           reduce using rule 16 (sentencia -> seleccion .)
    PRINT           reduce using rule 16 (sentencia -> seleccion .)
    RET             reduce using rule 16 (sentencia -> seleccion .)
    LLAVE_I         reduce using rule 16 (sentencia -> seleccion .)


state 26

    (17) sentencia -> iteracion .

    LLAVE_D         reduce using rule 17 (sentencia -> iteracion .)
    INT             reduce using rule 17 (sentencia -> iteracion .)
    ID              reduce using rule 17 (sentencia -> iteracion .)
    IF              reduce using rule 17 (sentencia -> iteracion .)
    WHILE           reduce using rule 17 (sentencia -> iteracion .)
    PRINT           reduce using rule 17 (sentencia -> iteracion .)
    RET             reduce using rule 17 (sentencia -> iteracion .)
    LLAVE_I         reduce using rule 17 (sentencia -> iteracion .)


state 27

    (18) sentencia -> salida .

    LLAVE_D         reduce using rule 18 (sentencia -> salida .)
    INT             reduce using rule 18 (sentencia -> salida .)
    ID              reduce using rule 18 (sentencia -> salida .)
    IF              reduce using rule 18 (sentencia -> salida .)
    WHILE           reduce using rule 18 (sentencia -> salida .)
    PRINT           reduce using rule 18 (sentencia -> salida .)
    RET             reduce using rule 18 (sentencia -> salida .)
    LLAVE_I         reduce using rule 18 (sentencia -> salida .)


state 28

    (19) sentencia -> retorno .

    LLAVE_D         reduce using rule 19 (sentencia -> retorno .)
    INT             reduce using rule 19 (sentencia -> retorno .)
    ID              reduce using rule 19 (sentencia -> retorno .)
    IF              reduce using rule 19 (sentencia -> retorno .)
    WHILE           reduce using rule 19 (sentencia -> retorno .)
    PRINT           reduce using rule 19 (sentencia -> retorno .)
    RET             reduce using rule 19 (sentencia -> retorno .)
    LLAVE_I         reduce using rule 19 (sentencia -> retorno .)


state 29

    (20) sentencia -> bloque .

    LLAVE_D         reduce using rule 20 (sentencia -> bloque .)
    INT             reduce using rule 20 (sentencia -> bloque .)
    ID              reduce using rule 20 (sentencia -> bloque .)
    IF              reduce using rule 20 (sentencia -> bloque .)
    WHILE           reduce using rule 20 (sentencia -> bloque .)
    PRINT           reduce using rule 20 (sentencia -> bloque .)
    RET             reduce using rule 20 (sentencia -> bloque .)
    LLAVE_I         reduce using rule 20 (sentencia -> bloque .)


state 30

    (21) declaracion -> INT . lista_ids PUNTO_COMA
    (22) lista_ids -> . lista_ids COMA ID
    (23) lista_ids -> . ID

    ID              shift and go to state 40

    lista_ids                      shift and go to state 39

state 31

    (24) asignacion -> ID . ASIG expresion_log PUNTO_COMA

    ASIG            shift and go to state 41


state 32

    (25) seleccion -> IF . PARENTESIS_I expresion_log PARENTESIS_D bloque ELSE bloque
    (26) seleccion -> IF . PARENTESIS_I expresion_log PARENTESIS_D bloque

    PARENTESIS_I    shift and go to state 42


state 33

    (27) iteracion -> WHILE . PARENTESIS_I expresion_log PARENTESIS_D bloque

    PARENTESIS_I    shift and go to state 43


state 34

    (28) salida -> PRINT . PARENTESIS_I expresion_log PARENTESIS_D PUNTO_COMA
    (29) salida -> PRINT . PARENTESIS_I CADENA PARENTESIS_D PUNTO_COMA
    (30) salida -> PRINT . PARENTESIS_I CADENA COMA expresion_log PARENTESIS_D PUNTO_COMA

    PARENTESIS_I    shift and go to state 44


state 35

    (31) retorno -> RET . expresion_log PUNTO_COMA
    (32) expresion_log -> . expresion_log OR term_log
    (33) expresion_log -> . term_log
    (34) term_log -> . term_log AND factor_log
    (35) term_log -> . factor_log
    (36) factor_log -> . expresion_relacional
    (37) expresion_relacional -> . expresion_aritmetica comparador expresion_aritmetica
    (38) expresion_relacional -> . expresion_aritmetica
    (45) expresion_aritmetica -> . expresion_aritmetica SUMA termino
    (46) expresion_aritmetica -> . expresion_aritmetica RESTA termino
    (47) expresion_aritmetica -> . termino
    (48) termino -> . termino MULTIPLICAR factor
    (49) termino -> . termino DIVISION factor
    (50) termino -> . factor
    (51) factor -> . ID
    (52) factor -> . CTE_ENTERA
    (53) factor -> . PARENTESIS_I expresion_log PARENTESIS_D
    (54) factor -> . llamada_funcional
    (55) llamada_funcional -> . ID PARENTESIS_I lista_parametros PARENTESIS_D
    (56) llamada_funcional -> . ID PARENTESIS_I PARENTESIS_D

    ID              shift and go to state 52
    CTE_ENTERA      shift and go to state 53
    PARENTESIS_I    shift and go to state 54

    expresion_log                  shift and go to state 45
    term_log                       shift and go to state 46
    factor_log                     shift and go to state 47
    expresion_relacional           shift and go to state 48
    expresion_aritmetica           shift and go to state 49
    termino                        shift and go to state 50
    factor                         shift and go to state 51
    llamada_funcional              shift and go to state 55

state 36

    (7) lista_pfunc -> INT ID COMA . INT ID COMA INT ID
    (8) lista_pfunc -> INT ID COMA . INT ID

    INT             shift and go to state 56


state 37

    (10) bloque -> LLAVE_I sentencias LLAVE_D .

    FUNC            reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    $end            reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    LLAVE_D         reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    INT             reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    ID              reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    IF              reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    WHILE           reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    PRINT           reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    RET             reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    LLAVE_I         reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)
    ELSE            reduce using rule 10 (bloque -> LLAVE_I sentencias LLAVE_D .)


state 38

    (12) sentencias -> sentencias sentencia .

    LLAVE_D         reduce using rule 12 (sentencias -> sentencias sentencia .)
    INT             reduce using rule 12 (sentencias -> sentencias sentencia .)
    ID              reduce using rule 12 (sentencias -> sentencias sentencia .)
    IF              reduce using rule 12 (sentencias -> sentencias sentencia .)
    WHILE           reduce using rule 12 (sentencias -> sentencias sentencia .)
    PRINT           reduce using rule 12 (sentencias -> sentencias sentencia .)
    RET             reduce using rule 12 (sentencias -> sentencias sentencia .)
    LLAVE_I         reduce using rule 12 (sentencias -> sentencias sentencia .)


state 39

    (21) declaracion -> INT lista_ids . PUNTO_COMA
    (22) lista_ids -> lista_ids . COMA ID

    PUNTO_COMA      shift and go to state 57
    COMA            shift and go to state 58


state 40

    (23) lista_ids -> ID .

    PUNTO_COMA      reduce using rule 23 (lista_ids -> ID .)
    COMA            reduce using rule 23 (lista_ids -> ID .)


state 41

    (24) asignacion -> ID ASIG . expresion_log PUNTO_COMA
    (32) expresion_log -> . expresion_log OR term_log
    (33) expresion_log -> . term_log
    (34) term_log -> . term_log AND factor_log
    (35) term_log -> . factor_log
    (36) factor_log -> . expresion_relacional
    (37) expresion_relacional -> . expresion_aritmetica comparador expresion_aritmetica
    (38) expresion_relacional -> . expresion_aritmetica
    (45) expresion_aritmetica -> . expresion_aritmetica SUMA termino
    (46) expresion_aritmetica -> . expresion_aritmetica RESTA termino
    (47) expresion_aritmetica -> . termino
    (48) termino -> . termino MULTIPLICAR factor
    (49) termino -> . termino DIVISION factor
    (50) termino -> . factor
    (51) factor -> . ID
    (52) factor -> . CTE_ENTERA
    (53) factor -> . PARENTESIS_I expresion_log PARENTESIS_D
    (54) factor -> . llamada_funcional
    (55) llamada_funcional -> . ID PARENTESIS_I lista_parametros PARENTESIS_D
    (56) llamada_funcional -> . ID PARENTESIS_I PARENTESIS_D

    ID              shift and go to state 52
    CTE_ENTERA      shift and go to state 53
    PARENTESIS_I    shift and go to state 54

    expresion_log                  shift and go to state 59
    term_log                       shift and go to state 46
    factor_log                     shift and go to state 47
    expresion_relacional           shift and go to state 48
    expresion_aritmetica           shift and go to state 49
    termino                        shift and go to state 50
    factor                         shift and go to state 51
    llamada_funcional              shift and go to state 55

state 42
